----------------------------------------------------------------------
 OmegaT 1.8.0 update 3 Changes
----------------------------------------------------------------------
1.8.0 update 3 vs. 1.8.0 update 2


   4 Enhancements
   1 Bugfixe
----------------------------------------------------------------------
1.8.0 update 3

  Implemented requests:

  - OpenDoc: Allow to translate or not Bookmark references  
  http://sourceforge.net/support/tracker.php?aid=2018244 

  Other enhancements:

  - Slovak localisation updated to 1.8 (UI)
  - Dutch localisation updated to 1.8 (UI, readme)
  - Czech localisation updated to 1.8 (UI, readme)

  Bug fixes:
  - Extra space at the beginning of each segment in the German 
localization

----------------------------------------------------------------------
 OmegaT 1.8.0 update 2 Changes
----------------------------------------------------------------------
1.8.0 update 2 vs. 1.8.0 update 1


   3 Enhancements
   4 Bugfixes
----------------------------------------------------------------------
1.8.0 update 2

  Other enhancements:

  - Spellchecking dialogs now have a title
  - Non-breaking spaces are trimmed from translatable text
  - Catalan localisation updated to 1.8 (UI)

  Bug fixes:
  
  - Spellchecking dialogs not dismissable with [esc]
  http://sourceforge.net/support/tracker.php?aid=1815506
  - Wrong Import file dialog title
  http://sourceforge.net/support/tracker.php?aid=1940081 
  - Hunspell not working on Linux 64-bit
  - Non-ascii char badly handled in hunspell lib loading on OS-X
  http://sourceforge.net/support/tracker.php?aid=1862199  


----------------------------------------------------------------------
 OmegaT 1.8.0 update 1 Changes
----------------------------------------------------------------------
1.8.0 update 1 vs. 1.8.0


   3 Enhancements
   0 Bugfix

----------------------------------------------------------------------
1.8.0 update 1

 Other enhancements:
